--- a/myList.html
+++ b/myList.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/style2.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat|Teko&display=swap"
       rel="stylesheet"
