--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Teko&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:770px)">
     <title>Movies</title>
   </head>
   <body>
@@ -34,8 +35,8 @@
           <div class="movie-title">Spider-Man: <br>Far From Home</div>
           <div class="sub-title">Coming soon &nbsp;|&nbsp; Tuesday, June 2nd</div>
             <div class="buttons">
-              <a href="https://youtube.com" class="trailer btn-accent uppercase"><i class="fas fa-play"></i> &nbsp; Watch Trailer</a>
-              <a href="https://youtube.com" class="trailer btn-white uppercase"> <span class="accent"><i class="fas fa-plus"></i></span> &nbsp;  add to list</a>
+              <a href="https://youtube.com" class="btn-accent uppercase"><i class="fas fa-play"></i> &nbsp; Watch Trailer</a>
+              <a href="https://youtube.com" class="btn-white uppercase"> <span class="accent"><i class="fas fa-plus"></i></span> &nbsp;  add to list</a>
             </div>
           </div>
         <div class="about-movie">
