landing page responsive for most devices

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <img class = 'background-img' src="./img/spider-man--far-from-home.png"/>
     <header>
       <div class="container left">
+        <div class="hamburger">
+          <i class="fas fa-bars "></i>
+        </div>
           <div class="logo">Film<span class="accent">oo</span>n</span></div>
         <ul>
           <li class="selected"> <a href ="index.html">Home</a></li>
