movies page responsive

--- a/movies.html
+++ b/movies.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:770px)">
     <style>
     body{
       overflow: auto;
@@ -21,6 +22,9 @@
   <body class="scrollable-body">
     <header>
       <div class="container left">
+          <div class="hamburger">
+              <i class="fas fa-bars "></i>
+            </div>
           <div class="logo">Film<span class="accent">oo</span>n</span></div>
         <ul>
           <li> <a href ="index.html">Home</a></li>
