--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Montserrat|Teko&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
     <style>
     body{
@@ -22,8 +23,11 @@
   <body class="scrollable-body">
     <header>
       <div class="container left">
+          <div class="hamburger">
+              <i class="fas fa-bars "></i>
+            </div>
           <div class="logo">Film<span class="accent">oo</span>n</span></div>
-        <ul>
+        <ul class="nav-Links">
           <li> <a href ="index.html">Home</a></li>
           <li><a href = "movies.html">Movies</a></li>
         
@@ -44,7 +48,7 @@
           <hr>
           <h1>We Love Movies</h1>
           <hr>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, magni nostrum? Tenetur debitis recusandae voluptas blanditiis sit ut necessitatibus consequuntur impedit quos accusamus, perspiciatis delectus eos sed assumenda eaque numquam minima ipsum quibusdam reiciendis quidem saepe vitae nostrum corporis? Nihil quidem deleniti omnis mollitia veniam obcaecati nostrum, veritatis magni harum excepturi, tenetur dolorum! Dolor voluptatum ullam est veniam architecto perspiciatis dolore corporis quod, velit minima labore, hic perferendis id voluptate quidem aliquid ab expedita culpa. Vero nostrum consectetur libero quod, repudiandae rem repellendus ad, quasi, eos reprehenderit molestias omnis saepe harum quisquam minima cumque nobis ea dolores repellat ut soluta. Distinctio labore cum esse, ducimus quia, facilis ex itaque similique natus reiciendis iure porro ipsum quos aliquid explicabo inventore assumenda incidunt in aperiam repellat molestiae iste fuga? Incidunt unde culpa quia autem exercitationem laborum officiis itaque, officia rem omnis nam magnam corrupti vitae, veritatis tempore consequuntur sapiente non ea esse accusamus, repudiandae consequatur! Illo hic maxime repudiandae a provident animi eum, ab ullam vitae porro nesciunt soluta. Officiis amet adipisci non quia enim aliquam, voluptatum recusandae neque ullam tempore blanditiis exercitationem dignissimos deleniti, eligendi maiores similique. Cupiditate doloremque praesentium incidunt quo ipsam accusamus tempora nobis autem atque consequuntur, iusto unde omnis laboriosam corrupti, sint sunt beatae obcaecati similique facere recusandae!</p>
+          <p class="hidetext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, magni nostrum? Tenetur debitis recusandae voluptas blanditiis sit ut necessitatibus consequuntur impedit quos accusamus, perspiciatis delectus eos sed assumenda eaque numquam minima ipsum quibusdam reiciendis quidem saepe vitae nostrum corporis? Nihil quidem deleniti omnis mollitia veniam obcaecati nostrum, veritatis magni harum excepturi, tenetur dolorum! Dolor voluptatum ullam est veniam architecto perspiciatis dolore corporis quod, velit minima labore, hic perferendis id voluptate quidem aliquid ab expedita culpa. Vero nostrum consectetur libero quod, repudiandae rem repellendus ad, quasi, eos reprehenderit molestias omnis saepe harum quisquam minima cumque nobis ea dolores repellat ut soluta. Distinctio labore cum esse, ducimus quia, facilis ex itaque <span>similique natus reiciendis iure porro ipsum quos aliquid explicabo inventore assumenda incidunt in aperiam repellat molestiae iste fuga? Incidunt unde culpa quia autem exercitationem laborum officiis itaque, officia rem omnis nam magnam corrupti vitae, veritatis tempore consequuntur sapiente non ea esse accusamus, repudiandae consequatur! Illo hic maxime repudiandae a provident animi eum, ab ullam vitae porro nesciunt soluta. Officiis</span> amet adipisci non quia enim aliquam, voluptatum recusandae neque ullam tempore blanditiis exercitationem dignissimos deleniti, eligendi maiores similique. Cupiditate doloremque praesentium incidunt quo ipsam accusamus tempora nobis autem atque consequuntur, iusto unde omnis laboriosam corrupti, sint sunt beatae obcaecati similique facere recusandae!</p>
         </div>
     </body>
 
@@ -55,5 +59,6 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script src="js/api.js"></script>
+  <script src="js/hamburger.js"></script>
   
 </html>
