--- a/contact.html
+++ b/contact.html
@@ -12,18 +12,22 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
     <style>
     body{
-      overflow: auto;
+      overflow: hidden;
     }
     </style>
     <title>Search Movies</title>
   </head>
-  <body class="scrollable-body">
+  <body>
     <header>
       <div class="container left">
+          <div class="hamburger">
+              <i class="fas fa-bars "></i>
+            </div>
           <div class="logo">Film<span class="accent">oo</span>n</span></div>
-        <ul>
+        <ul class="nav-Links">
           <li> <a href ="index.html">Home</a></li>
           <li><a href = "movies.html">Movies</a></li>
         
@@ -63,5 +67,6 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script src="js/api.js"></script>
+  <script src="js/hamburger.js"></script>
   
 </html>
