--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Teko&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
-    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:770px)">
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
     <title>Movies</title>
   </head>
   <body>
@@ -19,7 +19,7 @@
           <i class="fas fa-bars "></i>
         </div>
           <div class="logo">Film<span class="accent">oo</span>n</span></div>
-        <ul>
+        <ul class="nav-Links">
           <li class="selected"> <a href ="index.html">Home</a></li>
           <li><a href = "movies.html">Movies</a></li>
           <li><a href = "#" onclick = "window.location = 'myList.html'">My List</a></li>
@@ -122,5 +122,6 @@
 
     <script src="js/main.js"></script>
     <script src="js/api.js"></script>
+    <script src="js/hamburger.js"></script>
   </body>
 </html>
