--- a/movie.html
+++ b/movie.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Montserrat|Teko&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
     <style>
     body{
@@ -22,8 +23,11 @@
   <body class="scrollable-body">
     <header>
       <div class="container left">
+          <div class="hamburger">
+              <i class="fas fa-bars "></i>
+            </div>
           <div class="logo">Film<span class="accent">oo</span>n</span></div>
-        <ul>
+        <ul class="nav-Links">
           <li> <a href ="index.html">Home</a></li>
           <li><a href = "movies.html">Movies</a></li>
         
@@ -50,6 +54,7 @@
   crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/api.js"></script>
+  <script src="js/hamburger.js"></script>
   <script>
     getMovie();
   </script>
