--- a/movies.html
+++ b/movies.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
-    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:770px)">
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
     <style>
     body{
       overflow: auto;
@@ -26,7 +26,7 @@
               <i class="fas fa-bars "></i>
             </div>
           <div class="logo">Film<span class="accent">oo</span>n</span></div>
-        <ul>
+        <ul class="nav-Links">
           <li> <a href ="index.html">Home</a></li>
           <li class="selected"><a href = "movies.html">Movies</a></li>
         
@@ -57,5 +57,6 @@
   crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/api.js"></script>
+  <script src="js/hamburger.js"></script>
 
 </html>
