fixed scrolling error

--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,11 @@
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
     <style>
-    body{
-      overflow: hidden;
-    }
+    
     </style>
     <title>Search Movies</title>
   </head>
-  <body>
+  <body class= "scrollable-body">
     <header>
       <div class="container left">
           <div class="hamburger">
