--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Teko&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
+    <link rel="stylesheet" href="css/4k.css" media="screen and (min-width:1921px)">
     <title>Movies</title>
+    
   </head>
   <body>
     <img class = 'background-img' src="./img/spider-man--far-from-home.png"/>
