--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Teko&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
-    <link rel="stylesheet" href="css/4k.css" media="screen and (min-width:1921px)">
+    <link rel="stylesheet" href="css/widescreen.css" media="screen and (max-height:700px) and (min-width: 361px)">
     <title>Movies</title>
     
   </head>
@@ -37,8 +37,11 @@
     <section class="container-long">
       <div id="featured-movie">
         <div class="movie">
-          <div class="movie-title">Spider-Man: <br>Far From Home</div>
-          <div class="sub-title">Coming soon &nbsp;|&nbsp; Tuesday, June 2nd</div>
+          <div class="movie-desc">
+
+            <div class="movie-title">Spider-Man: <br>Far From Home</div>
+            <div class="sub-title">Coming soon &nbsp;|&nbsp; Tuesday, June 2nd</div>
+          </div>
             <div class="buttons">
               <a href="https://youtube.com" class="btn-accent uppercase"><i class="fas fa-play"></i> &nbsp; Watch Trailer</a>
               <a href="https://youtube.com" class="btn-white uppercase"> <span class="accent"><i class="fas fa-plus"></i></span> &nbsp;  add to list</a>
