--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
+    <link rel="stylesheet" href="css/widescreen.css" media="screen and (max-height:900px) and (min-width: 361px)">
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
     <style>
     body{
