--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     />
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
+    <link rel="stylesheet" href="css/widescreen.css" media="screen and (max-height:900px) and (min-width: 361px)">
     <style>
     
     </style>
