--- a/movie.html
+++ b/movie.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:1100px)">
+    <link rel="stylesheet" href="css/widescreen.css" media="screen and (max-height:900px) and (min-width: 361px)">
     <script src="https://kit.fontawesome.com/b5fb082315.js"></script>
     <style>
     body{
@@ -20,7 +21,7 @@
     </style>
     <title>Search Movies</title>
   </head>
-  <body class="scrollable-body">
+  <body class="scrollable-body" id="movie-body">
     <header>
       <div class="container left">
           <div class="hamburger">
