trailer link updated

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="sub-title">Coming soon &nbsp;|&nbsp; Tuesday, June 2nd</div>
           </div>
             <div class="buttons">
-              <a href="https://youtube.com" class="btn-accent uppercase"><i class="fas fa-play"></i> &nbsp; Watch Trailer</a>
+              <a href="https://www.youtube.com/watch?v=Nt9L1jCKGnE" target = "_blank" class="btn-accent uppercase"><i class="fas fa-play"></i> &nbsp; Watch Trailer</a>
               <a href="https://youtube.com" class="btn-white uppercase"> <span class="accent"><i class="fas fa-plus"></i></span> &nbsp;  add to list</a>
             </div>
           </div>
@@ -68,21 +68,19 @@
           </div>
         </div>
       </div>
-      <div id="related">
-        
-      
+      <div id="related">      
         <div id="other-movies">
           <h2 class="sub-title">Related Movies</h2>
-          <div class="rel-movie">
+          <div class="rel-movie"onclick="movieSelect('tt4154796')" href ="movie.html">
             <h2 class="lead"><i class="fas fa-ticket-alt"></i> &nbsp; <span>Avengers: &nbsp; Endgame</span></h2>
             <p class="movie-info">After Thanos wipes out half of the universe's population, it's up to the remaining Avengers to save the day...</p>
           </div>
-          <div class="rel-movie">
+          <div class="rel-movie" onclick="movieSelect('tt2250912')" href ="movie.html">
               <h2 class="lead"><i class="fas fa-ticket-alt"></i> &nbsp; <span>Spider-Man: &nbsp; Homecoming</span></h2>
               <p class="movie-info">Peter Parker is just an ordinary high school boy, but, he has a secret, he's Spider-Man! Can he balance his social life with his super life?</p>
           </div>
-          <div class="rel-movie">
-              <h2 class="lead"><i class="fas fa-ticket-alt"></i> &nbsp; <span>Spider-Man: &nbsp; Into the spider-verse</span></h2>
+          <div class="rel-movie" onclick="movieSelect('tt4633694')" href ="movie.html">
+              <h2 class="lead"><i class="fas fa-ticket-alt"></i> &nbsp; <span>Spider-Man: &nbsp; Into the Spider-Verse</span></h2>
               <p class="movie-info">Miles Morales becomes Spider-Man of his reality, crossing his path with five counterparts from other dimensions to stop a threat for all realities.</p>
           </div>
         </div>
